# pyrate_limit

./: README.md  bench.py  pyproject.toml
examples/: basic.py
limitless_py/: decorators.py  storage.py
limitless_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyrate-limit/: core.py  storage.py
pyrate_limit/: __init__.py  core.py
pyrate_limit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_ratelimit.py
